--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="poster">
+  <div class="container row">
+  <h1 class="col-8">MeetBall, spice up your game.</h1>
+  <div class="col-4">
+    <a class="btn btn-lg btn-light rounded-pill" href="#">Find games</a>
+    <a class="btn btn-lg btn-light rounded-pill" href="#">Create a game</a>
+  </div>
+  </div>
+</div>
