ajout des cards sur index des matchs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,22 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<ul class="cb-slideshow">
+	<li>
+		<span>Image 01</span>
+		<div>
+			<h3>Join The Game</h3>
+		</div>
+	</li>
+  <li>
+    <span>Image 01</span>
+		<div>
+			<h3>For Basketball Lovers</h3>
+		</div>
+  </li>
+  <li>
+    <span>Image 01</span>
+		<div>
+			<h3>By Basketball Lovers</h3>
+		</div>
+  </li>
+</ul>
