--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,69 +1,156 @@
-<div>
-    <!-- GAME 1 -->
-  <div class="cards col-sm-8">
-    <div class="card" style="width: 18rem;">
-      <img src="https://images.unsplash.com/photo-1519861531473-9200262188bf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Join ! <b>1</b> player missing</a>
+<!-- TEST DU DISPLAY DES CARDS DE MATCHS -->
+<div class="d-flex home">
+<div class="flex-fill container-fluid mx-3 mt-4 mb-3 col-8">
+    <div class="row">
+        <div class="col-6">
+            <div class="card p-3 mb-3 bg-image">
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
+                        <div class="ms-2 c-details">
+                            <h6 class="mb-0 card-organizer">Joel</h6>
+                        </div>
+                    </div>
+                    <div class="badge badge-nba bg-text"> <span>NBA</span> </div>
+                </div>
+                <div class="mt-5">
+                    <h3 class="heading bg-text" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.2)">Stade Carpentier<br>Demain 30/11 à 16h</h3>
+                    <div class="mt-5">
+                        <div class="progress">
+                            <div class="progress-bar bg-text" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="mt-3 bg-text"> <span class="text1">3 Inscrits <span class="text2">sur 6 places</span></span> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card p-3 mb-2 bg-image2">
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="icon"> <i class="bx bxl-dribbble"></i> </div>
+                        <div class="ms-2 c-details">
+                            <h6 class="mb-0 card-organizer">Hugo</h6>
+                        </div>
+                    </div>
+                    <div class="badge badge-proa"> <span>Pro A</span> </div>
+                </div>
+                <div class="mt-5">
+                    <h3 class="heading" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.2)">Bois de Vincennes<br>Dim. 04/12 à 14h</h3>
+                    <div class="mt-5">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 83%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="mt-3"> <span class="text1">5 Inscrits <span class="text2">sur 6 places</span></span> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
-    </div>
-
-      <!-- GAME 2 -->
-    <div class="card" style="width: 18rem;">
-      <img src="https://images.unsplash.com/photo-1627627256672-027a4613d028?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2074&q=80" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Join ! <b>1</b> player missing</a>
+      <div class="row">
+        <div class="col-6">
+            <div class="card p-3 mb-2 bg-image3">
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="icon"> <i class="bx bxl-reddit"></i> </div>
+                        <div class="ms-2 c-details">
+                            <h6 class="mb-0 card-organizer">Julien</h6>
+                        </div>
+                    </div>
+                    <div class="badge badge-district"> <span>District</span> </div>
+                </div>
+                <div class="mt-5">
+                    <h3 class="heading">Playground Pigalle <br>Sam. 03/12 à 10h</h3>
+                    <div class="mt-5">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 17%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="mt-3"> <span class="text1">1 Inscrit <span class="text2">sur 6 places</span></span> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card p-3 mb-2 bg-image">
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
+                        <div class="ms-2 c-details">
+                            <h6 class="mb-0 card-organizer">Joel</h6>
+                        </div>
+                    </div>
+                    <div class="badge badge-nba"> <span>NBA</span> </div>
+                </div>
+                <div class="mt-5">
+                    <h3 class="heading">Stade Carpentier<br>Demain 30/11 à 16h</h3>
+                    <div class="mt-5">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="mt-3"> <span class="text1">3 Inscrits <span class="text2">sur 6 places</span></span> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
-    </div>
-
-      <!-- GAME 3 -->
-    <div class="card" style="width: 18rem;">
-      <img src="https://images.unsplash.com/photo-1474224017046-182ece80b263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Join ! <b>2</b> players missing</a>
-      </div>
+      <div class="row">
+        <div class="col-6">
+            <div class="card p-3 mb-2 bg-image2">
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="icon"> <i class="bx bxl-dribbble"></i> </div>
+                        <div class="ms-2 c-details">
+                            <h6 class="mb-0 card-organizer">Hugo</h6>
+                        </div>
+                    </div>
+                    <div class="badge badge-proa"> <span>Pro A</span> </div>
+                </div>
+                <div class="mt-5">
+                    <h3 class="heading">Bois de Vincennes<br>Dim. 04/12 à 14h</h3>
+                    <div class="mt-5">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 83%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="mt-3"> <span class="text1">5 Inscrits <span class="text2">sur 6 places</span></span> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+          <div class="card p-3 mb-2 bg-image3">
+              <div class="d-flex justify-content-between">
+                  <div class="d-flex flex-row align-items-center">
+                      <div class="icon"> <i class="bx bxl-reddit"></i> </div>
+                      <div class="ms-2 c-details">
+                          <h6 class="mb-0 card-organizer">Julien</h6>
+                      </div>
+                  </div>
+                  <div class="badge badge-district"> <span>District</span> </div>
+              </div>
+              <div class="mt-5">
+                  <h3 class="heading">Playground Pigalle <br>Sam. 03/12 à 10h</h3>
+                  <div class="mt-5">
+                      <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 17%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <div class="mt-3"> <span class="text1">1 Inscrit <span class="text2">sur 6 places</span></span> </div>
+                  </div>
+              </div>
+          </div>
+        </div>
     </div>
 </div>
-<div class="cards col-sm-8">
-      <!-- GAME 4 -->
-    <div class="card" style="width: 18rem;">
-      <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2090&q=80" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
 
-      <!-- GAME 5 -->
-    <div class="card" style="width: 18rem;">
-      <img src="https://images.unsplash.com/photo-1542652694-40abf526446e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+<!-- FAUSSE MAP POUR TEST D'AFFICHAGE -->
+<div class="flex-fill container-fluid mx-3 mt-4 mb-3 col-4 bg-map">
+  <!--<div class="row">
+    <div class="col-12 bg-map">
     </div>
-
-      <!-- GAME 6 -->
-    <div class="card" style="width: 18rem;">
-      <img src="https://images.unsplash.com/photo-1504450758481-7338eba7524a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
+  </div>-->
+</div>
 </div>
 
-
+<!-- DISPLAY DE LA MAP -->
 <div style="width: 100%; height: 600px;"
   data-controller="map"
   data-map-markers-value="<%= @markers.to_json %>"
