--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
   <div class="container row">
   <h1 class="col-8">MeetBall, spice up your game.</h1>
   <div class="col-4">
-    <a class="btn btn-lg btn-light rounded-pill" href="#">Find games</a>
-    <a class="btn btn-lg btn-light rounded-pill" href="#">Create a game</a>
+  <div class="btn btn-lg btn-light rounded-pill"><%= link_to "Find a game", matches_path %></div>
+  <div class="btn btn-lg btn-light rounded-pill"><%= link_to "Create a game", new_match_path %></div>
   </div>
   </div>
 </div>
