--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,6 +1,6 @@
 <!-- TEST DU DISPLAY DES CARDS DE MATCHS -->
 <div class="d-flex home">
-<div class="flex-fill container-fluid mx-3 mt-4 mb-3 col-8">
+<div class="flex-fill container-fluid mx-3 mt-4 col-8">
     <div class="row">
         <div class="col-6">
             <div class="card p-3 mb-3 bg-image">
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="col-6">
-            <div class="card p-3 mb-2 bg-image2">
+            <div class="card p-3 mb-3 bg-image2">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-dribbble"></i> </div>
@@ -49,7 +49,7 @@
       </div>
       <div class="row">
         <div class="col-6">
-            <div class="card p-3 mb-2 bg-image3">
+            <div class="card p-3 mb-3 bg-image3">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-reddit"></i> </div>
@@ -60,7 +60,7 @@
                     <div class="badge badge-district"> <span>District</span> </div>
                 </div>
                 <div class="mt-5">
-                    <h3 class="heading">Playground Pigalle <br>Sam. 03/12 à 10h</h3>
+                    <h3 class="heading" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.2)">Playground Pigalle <br>Sam. 03/12 à 10h</h3>
                     <div class="mt-5">
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 17%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="col-6">
-            <div class="card p-3 mb-2 bg-image">
+            <div class="card p-3 mb-3 bg-image">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
@@ -95,7 +95,7 @@
       </div>
       <div class="row">
         <div class="col-6">
-            <div class="card p-3 mb-2 bg-image2">
+            <div class="card p-3 mb-3 bg-image2">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-dribbble"></i> </div>
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="col-6">
-          <div class="card p-3 mb-2 bg-image3">
+          <div class="card p-3 mb-3 bg-image3">
               <div class="d-flex justify-content-between">
                   <div class="d-flex flex-row align-items-center">
                       <div class="icon"> <i class="bx bxl-reddit"></i> </div>
