--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div class="poster">
+<div class="poster" style="  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path "#{rand(6)}.jpeg" %>);
+">
   <div class="container row">
   <h1 class="col-8">MeetBall, spice up your game.</h1>
   <div class="col-4">
