--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,8 @@
   <div class="container row">
   <h1 class="col-8">MeetBall, spice up your game.</h1>
   <div class="col-4">
-  <div class="btn btn-lg btn-light rounded-pill"><%= link_to "Find a game", matches_path %></div>
-  <div class="btn btn-lg btn-light rounded-pill"><%= link_to "Create a game", new_match_path %></div>
+  <%= link_to "Find a game", matches_path, class:"btn btn-lg btn-light rounded-pill" %>
+  <%= link_to "Create a game", new_match_path, class:"btn btn-lg btn-light rounded-pill" %>
   </div>
   </div>
 </div>
