--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,2 +1,24 @@
 <h1>Matches#edit</h1>
-<p>Find me in app/views/matches/edit.html.erb</p>
+<%= simple_form_for [@match],
+                    html: {
+                      data: {
+                        controller: 'flatpickr'
+                      }
+                    } do |f| %>
+
+ <%= f.input :address,
+            input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
+            wrapper_html: {data: {controller: "address-autocomplete",
+            address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
+      <br></div>
+  <%= f.input :date,
+    as: :string,
+            input_html: {
+              data: {
+                flatpickr_target: 'dateInput',
+              }
+            } %>
+  <%= f.input :comment %>
+  <%= f.input :level_rating %>
+  <%= f.submit %>
+<% end %>
