--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -8,6 +8,31 @@
 </ul>
 </div>
 
+<div>
+  <%= @team_one.name %>
+  <ul>
+    <% @team_one.users.each do |user| %>
+      <li><%= user.first_name %></li>
+    <% end %>
+  </ul>
+  <% if @team_one.can_accept?(current_user) %>
+    <%= link_to "join", team_participations_path(@team_one), data: {turbo_method: :post} %>
+  <% end %>
+</div>
+
+<div>
+  <%= @team_two.name %>
+  <ul>
+    <% @team_two.users.each do |user| %>
+      <li><%= user.first_name %></li>
+    <% end %>
+  </ul>
+  <% if @team_two.can_accept?(current_user) %>
+    <%= link_to "join", team_participations_path(@team_two), data: {turbo_method: :post} %>
+
+  <% end %>
+</div>
+
 <% if current_user == @match.user %>
 <%= link_to "delete this match", match_path(@match), data: {turbo_method: :delete} %>
 <%= link_to "update this match", edit_match_path(@match)%>
