ajout level condition sur index

--- a/app/assets/stylesheets/components/_index_cards.scss
+++ b/app/assets/stylesheets/components/_index_cards.scss
@@ -83,15 +83,15 @@ body {
   align-items: center
 }
 
-.badge-nba {
+.badge-3 {
   color: #900C3F;
 }
 
-.badge-proa {
+.badge-2 {
   color: #FFC300;
 }
 
-.badge-district {
+.badge-1 {
   color: #8CE764;
 }
 
