--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,46 +1,12 @@
-<!-- TEST DU DISPLAY DES CARDS DE MATCHS -->
-<!--
-<div class="d-flex home">
-  <div class="flex-fill container-fluid mx-3 mt-4 mb-3 col-8">
-    <% @matches.each do |match| %>
-      <%= link_to match_path(match) do %>
-      <div class="row">
-        <div class="col-6">
-          <div class="card p-3 mb-3 bg-image">
-            <div class="d-flex justify-content-between">
-              <div class="d-flex flex-row align-items-center">
-                <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
-                  <div class="ms-2 c-details">
-                    <h6 class="mb-0 card-organizer"><%= match.user.first_name %></h6>
-                    <div class="badge badge-nba bg-text"> <span><%= match.level_rating %></span> </div>
-                      <div class="mt-5">
-                        <h3 class="heading bg-text" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.2)"><%= match.address %><br><%= match.date %></h3>
-                          <div class="mt-5">
-                            <div class="progress">
-                              <div class="progress-bar bg-text" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-              <div class="mt-3 bg-text"> <span class="text1">3 Inscrits <span class="text2">sur 6 places</span></span> </div>
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
-</div>
--->
+<!-- DIV ENGLOBANT LES CARDS ET LA MAP -->
 <div class="d-flex home">
   <div class="flex-fill container-fluid mx-3 mt-4 col-8">
     <div class="row">
+      <!-- ITERATION AUTOUR DE CHAQUE MATCH -->
       <% @matches.each do |match| %>
-      <!--<%= link_to match_path(match) do %>-->
         <div class="col-6">
-            <!-- CARD 1 -->
+            <!-- CARD -->
+            <%= link_to match_path(match) do %>
             <div class="card p-3 mb-3 bg-image">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
@@ -49,7 +15,17 @@
                             <h6 class="mb-0 card-organizer"><%= match.user.first_name %></h6>
                         </div>
                     </div>
-                    <div class="badge badge-nba bg-text"> <%= match.level_rating %> </div>
+                    <div class="badge bg-text badge-<%= match.level_rating %>">
+
+                        <% if match.level_rating == 1 %>
+                          <span>District</span>
+                        <% elsif match.level_rating == 2 %>
+                          <span>Pro A</span>
+                        <% else %>
+                          <span>NBA</span>
+                        <% end %>
+
+                    </div>
                 </div>
                 <div class="mt-5">
                     <h3 class="heading bg-text size-text" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.2)"><%= match.address[0, 25] %>...<br><%= match.date %></h3>
@@ -61,9 +37,9 @@
                     </div>
                 </div>
             </div>
+            <% end %>
         </div>
       <% end %>
-      <!--<% end %>-->
     </div>
   </div>
 
