--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -7,7 +7,7 @@
         <div class="col-6">
             <!-- CARD -->
             <%= link_to match_path(match) do %>
-            <div class="card p-3 mb-3 bg-image">
+            <div class="card p-3 mb-3" style="background-size: cover; background-position: center; background-repeat: no-repeat; background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= Match::ADDRESSES[match.address] %>);">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
