--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -6,7 +6,9 @@
                       }
                     } do |f| %>
 
- <%= f.input :address,
+ <%= f.input :address, collection: Match::ADDRESSES.keys %>
+
+ <%#= f.input :address,
             input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
             wrapper_html: {data: {controller: "address-autocomplete",
             address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
