avancement-page-new-match

--- a/app/assets/stylesheets/components/_index_cards.scss
+++ b/app/assets/stylesheets/components/_index_cards.scss
@@ -83,15 +83,15 @@ body {
   align-items: center
 }
 
-.badge-3 {
+.badge-nba {
   color: #900C3F;
 }
 
-.badge-2 {
+.badge-proa {
   color: #FFC300;
 }
 
-.badge-1 {
+.badge-district {
   color: #8CE764;
 }
 
