--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -16,8 +16,57 @@ h2{
   padding: 10px;
   margin: 10px;
   padding-bottom: 3Opx;
+
+  width: 550px;
 }
 
 img, svg {
-  width: 100px;
+  width: 200px;
+}
+
+.avatar-profile{
+  border-radius: 50%;
+  border: 1Opx;
+  padding-bottom: 5px;
+  margin: 5px;
+  display: flex;
+  align-items: center;
+}
+
+h3{
+  border: solid 3px;
+  border-radius: 50%;
+
+}
+.circle {
+  margin:10px;
+  width:100px;
+  height:100px;
+  border-radius:100%;
+  background-color:#3D6AA2;
+  color:#fff;
+  text-align:center;
+  font-size:14px;
+  overflow:hidden;
+
+}
+
+.circle{line-height:100px;}
+
+.align-circle{
+  align-items: flex-start;
+  display: flex;
+}
+
+.bio-user{
+  border: solid 1px;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 5px;
+  text-align: start;
+}
+
+.poster{
+  background-size: cover ;
+  background-position: center;
 }
