--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -17,7 +17,7 @@
                     </div>
                     <div class="badge bg-text badge-<%= match.level_rating %>">
 
-                          <span><%= match.category %></span>
+                          <span style= "color: black"><%= match.category %></span>
 
 
                     </div>
