--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -16,8 +16,7 @@ h2{
   padding: 10px;
   margin: 10px;
   padding-bottom: 3Opx;
-
-  width: 550px;
+  width: 100%;
 }
 
 img, svg {
@@ -33,11 +32,7 @@ img, svg {
   align-items: center;
 }
 
-h3{
-  border: solid 3px;
-  border-radius: 50%;
 
-}
 .circle {
   margin:10px;
   width:100px;
