--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -37,3 +37,5 @@
 <%= link_to "delete this match", match_path(@match), data: {turbo_method: :delete} %>
 <%= link_to "update this match", edit_match_path(@match)%>
 <% end %>
+
+<%= link_to "JOIN THE GAME", recap_path(@match)%>
