--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -40,7 +40,7 @@
 
 <!-- MAPBOX AVEC TERRAINS -->
 <div class="flex-fill container-fluid mt-4 mb-3 me-3 col-4 bg-map">
-<div style="width: 100%; height: 100%"
+<div style="width: 100%; height: calc(100vh - 66px - 1.5em); position: sticky; top: calc(66px + 1.5em);"
   data-controller="map"
   data-map-markers-value="<%= @markers.to_json %>"
   data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
