--- a/app/assets/stylesheets/components/_index_cards.scss
+++ b/app/assets/stylesheets/components/_index_cards.scss
@@ -113,3 +113,12 @@ body {
 .text2 {
   color: orange;
 }
+
+.recap-team-card {
+  background-color: #FBEEDA;
+  padding: 10px;
+  border-radius: 10px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
