--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -63,7 +63,7 @@ ul{
   justify-content: center;
 }
 
-.cta {
+.ctaa {
     display: flex;
     padding: 10px 45px;
     text-decoration: none;
@@ -76,28 +76,28 @@ ul{
     transform: skewX(-15deg);
 }
 
-.cta:focus {
+a.ctaa:focus {
    outline: none;
 }
 
-.cta:hover {
+a.ctaa:hover {
     transition: 0.5s;
     box-shadow: 10px 10px 0 #FBC638;
 }
 
-.cta span:nth-child(2) {
+a.ctaa span:nth-child(2) {
     transition: 0.5s;
     margin-right: 0px;
 }
 
-.cta:hover  span:nth-child(2) {
+a.ctaa:hover  span:nth-child(2) {
     transition: 0.5s;
     margin-right: 45px;
 }
 
-  span {
-    transform: skewX(15deg)
-  }
+  // span {
+  //   transform: skewX(15deg)
+  // }
 
   span:nth-child(2) {
     width: 20px;
@@ -118,16 +118,16 @@ path.two {
     transform: translateX(-30%);
 }
 
-.cta:hover path.three {
+a.ctaa:hover path.three {
     animation: color_anim 1s infinite 0.2s;
 }
 
-.cta:hover path.one {
+a.ctaa:hover path.one {
     transform: translateX(0%);
     animation: color_anim 1s infinite 0.6s;
 }
 
-.cta:hover path.two {
+a.ctaa:hover path.two {
     transform: translateX(0%);
     animation: color_anim 1s infinite 0.4s;
 }
