--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -85,7 +85,7 @@
       <li>Niveau de jeu <%= @match.category %></li>
     </ul>
     <div class="wrapper">
-  <a class="cta" href="#">
+  <%= link_to recap_path(@match), class:"ctaa" do  %>
     <span>NEXT</span>
     <span>
       <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -96,10 +96,10 @@
         </g>
       </svg>
     </span>
-  </a>
-</div>
+  <% end %>
+    </div>
   </div>
-</div>
+  </div>
 
 
 
