--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -31,7 +31,7 @@ $title-text: 'Work Sans', sans-serif;
   box-shadow: 0 0 40px  rgba(255, 112, 67, 60%);
   display: flex;
   flex-direction: column;
-  height: 43.25rem;
+  height: 35.25rem;
   position: absolute;
   width: 31.75rem;
   padding: 10 rem;
@@ -171,4 +171,23 @@ button:focus{
 
 .bold{
   font-weight: 600;
+}
+
+.orange-btn {
+  font-size: x-large;
+  border: solid 2px;
+  width: 100%;
+  background-color: #ff7143;
+  border-radius: 1em;
+  margin-bottom: 1rem;
+  input {
+    color: white;
+  }
+  &:hover  {
+    border-color: #ff7143;
+    color: #ff7143;
+    background-color: white;
+    transition: 0,2ms;
+    border-radius: 1em;
+  }
 }
