--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
     <%= favicon_link_tag "https://cdn-icons-png.flaticon.com/512/1041/1041168.png", rel: "icon", type: "image/png" %>
   </head>
 
-  <body>
+  <body class= "bg">
+
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
     <%= yield %>
