--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -6,3 +6,12 @@
   text-align: center;
   font-family: "Open Sans", sans-serif;
 }
+
+#map{
+  width: 100%;
+  height: calc(100vh - 66px - 1.5em);
+  position: sticky;
+  top: 75px;
+  border-radius: 1em;
+  border: 3px solid black;
+}
