--- a/app/assets/stylesheets/components/_index_cards.scss
+++ b/app/assets/stylesheets/components/_index_cards.scss
@@ -123,3 +123,22 @@ body {
   display: flex;
   flex-direction: column;
 }
+.date-match p{
+  color: orange;
+}
+@media only screen and (max-width: 1279px) {
+  .address h4 {
+    font-size:20px;
+  }
+  .date-match p{
+    color: orange;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .address h4 {
+    font-size:16px;
+  }
+  .date-match p{
+    font-size:16px;
+  }
+}
